--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -178,6 +178,9 @@ select {
 .text-center {
   text-align: center;
 }
+.text-grey{
+  color: #e2e0e0 !important;
+}
 .text-right {
   text-align: right;
 }
@@ -237,6 +240,12 @@ select {
 .w-100 {
   width: 100%;
 }
+.w-80 {
+  width: 80%;
+}
+.w-90 {
+  width: 90%;
+}
 .min-w-small {
   min-width: var(--min-width);
 }
@@ -248,6 +257,10 @@ select {
 }
 
 /* --------------------------margin and paddings----------  */
+.my-5{
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
 .mt-50 {
   margin-top: var(--size-50);
 }
@@ -266,8 +279,18 @@ select {
 .mt-400 {
   margin-top: var(--size-400);
 }
+.mt-700 {
+  margin-top: var(--size-700);
+}
+.mx-auto{
+  margin-right: auto;
+  margin-left: auto;
+}
 .pt-5 {
   padding-top: var(--size-900);
+}
+.pt-2 {
+  padding-top: var(--size-300);
 }
 .pb-5 {
   padding-bottom: var(--size-900);
@@ -488,7 +511,6 @@ select {
 }
 .download-btns a{
   white-space: nowrap;
-  width: 100%;
 }
 }
 @media screen and (max-width: 30em) {
